apply plugin: 'java'
apply plugin: 'application'

version             = '0.1.0-SNAPSHOT'
description         = 'https://groups.google.com/forum/#!topic/quasar-pulsar-user/U2ztEdoPFqw'

ext.classifier      = ':jdk8' // ':'
sourceCompatibility = 1.8     // 1.7
targetCompatibility = 1.8     // 1.7

ext.quasarVer       = '0.7.5'
ext.slf4jVer        = '1.7.21'
ext.junitVer        = '4.12'

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

configurations {
    quasar
}

configurations.all {
    resolutionStrategy {
        failOnVersionConflict()

        force "org.slf4j:slf4j-api:$slf4jVer"
    }
}

repositories {
//    mavenLocal()
    mavenCentral()
//    maven { url "https://oss.sonatype.org/content/repositories/releases" }
//    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
//    maven { url 'https://maven.java.net/content/repositories/snapshots' }
}

dependencies {
    compile "co.paralleluniverse:quasar-core:${quasarVer}${classifier}"
    compile "org.slf4j:slf4j-api:$slf4jVer"
    compile 'ch.qos.logback:logback-classic:1.1.7'


    quasar "co.paralleluniverse:quasar-core:${quasarVer}${classifier}@jar"
}

mainClassName = "Main"

applicationDefaultJvmArgs = [
    // "-Dco.paralleluniverse.fibers.verifyInstrumentation=true",
    "-Dco.paralleluniverse.fibers.detectRunawayFibers=false",
    "-javaagent:${configurations.quasar.singleFile}", // =v, =d, =c, =m
    "-Djava.net.preferIPv4Stack=true",
    "-XX:+AlwaysPreTouch",
    "-XX:MaxMetaspaceSize=64m",
    "-XX:CompressedClassSpaceSize=32m",
    "-XX:ReservedCodeCacheSize=64m",
    "-XX:+HeapDumpOnOutOfMemoryError",
    "-XX:-OmitStackTraceInFastThrow",
    "-Duser.timezone=UTC",
    "-Dfile.encoding=UTF-8",
    "-XX:ParallelGCThreads=4",
    "-XX:+UseConcMarkSweepGC",
    "-XX:+DisableExplicitGC",
    "-XX:-PrintGC",
    "-XX:+PrintGCDateStamps",
    "-XX:+PrintGCDetails",
    "-XX:+PrintGCApplicationStoppedTime"
]

task wrapper(type: Wrapper) {
    gradleVersion = '2.12'
}

defaultTasks 'run'
